--- a/index.html
+++ b/index.html
@@ -58,6 +58,80 @@
     </div>
     <div class="header-overlay"></div>
   </header>
+  <main>
+    <section class="skills">
+      <h2 class="skills__title visually-hidden">Skills</h2>
+      <div class="skills__container">
+        <article class="skill-item">
+          <h3 class="skill-item__title">
+            <a href="" class="skill-item__link">HTML</a>
+          </h3>
+          <div class="skill-item__image" style="background-image: url(assets/img/img-html.png);"></div>
+          <div class="skill-item__overlay"></div>
+        </article>
+        <article class="skill-item">
+          <h3 class="skill-item__title">
+            <a href="" class="skill-item__link">CSS</a>
+          </h3>
+          <div class="skill-item__image" style="background-image: url(assets/img/img-css.png);"></div>
+          <div class="skill-item__overlay"></div>
+        </article>
+        <article class="skill-item">
+          <h3 class="skill-item__title">
+            <a href="" class="skill-item__link">Markup</a>
+          </h3>
+          <div class="skill-item__image" style="background-image: url(assets/img/img-markup.png);"></div>
+          <div class="skill-item__overlay"></div>
+        </article>
+        <article class="skill-item">
+          <h3 class="skill-item__title">
+            <a href="" class="skill-item__link">Web-Design</a>
+          </h3>
+          <div class="skill-item__image" style="background-image: url(assets/img/img-webdesign.png);"></div>
+          <div class="skill-item__overlay"></div>
+        </article>
+        <article class="skill-item">
+          <h3 class="skill-item__title">
+            <a href="" class="skill-item__link">Quality Assurance</a>
+          </h3>
+          <div class="skill-item__image" style="background-image: url(assets/img/img-qa.png);"></div>
+          <div class="skill-item__overlay"></div>
+        </article>
+        <article class="skill-item">
+          <h3 class="skill-item__title">
+            <a href="" class="skill-item__link">Codding</a>
+          </h3>
+          <div class="skill-item__image" style="background-image: url(assets/img/img-codding.png);"></div>
+          <div class="skill-item__overlay"></div>
+        </article>
+        <article class="skill-item">
+          <h3 class="skill-item__title">
+            <a href="" class="skill-item__link">Adaptability</a>
+          </h3>
+          <div class="skill-item__image" style="background-image: url(assets/img/img-adaptability.png);"></div>
+          <div class="skill-item__overlay"></div>
+        </article>
+        <article class="skill-item">
+          <h3 class="skill-item__title">
+            <a href="" class="skill-item__link">PHP</a>
+          </h3>
+          <div class="skill-item__image" style="background-image: url(assets/img/img-php.png);"></div>
+          <div class="skill-item__overlay"></div>
+        </article>
+        <article class="skill-item">
+          <h3 class="skill-item__title">
+            <a href="" class="skill-item__link">SEO</a>
+          </h3>
+          <div class="skill-item__image" style="background-image: url(assets/img/img-seo.png);"></div>
+          <div class="skill-item__overlay"></div>
+        </article>
+      </div>
+      <div class="skills__button">
+        <a href="" class="button button--primary">View all skills...</a>
+      </div>
+    </section>
+
+  </main>
 
   <!-- Подключаем библиотеку jquery, необходимую для работы нашего основного скрипта -->
   <script src="libs/jquery/dist/jquery.min.js"></script>
