--- a/index.html
+++ b/index.html
@@ -130,6 +130,36 @@
         <a href="" class="button button--primary">View all skills...</a>
       </div>
     </section>
+    <section class="ready">
+      <div class="ready__container">
+        <div class="ready__content">
+          <h2 class="ready__title">Are You Ready?
+            <br>
+            Let's start!
+          </h2>
+          <p class="ready__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias voluptates commodi
+            eligendi perspiciatis non ipsam numquam, perferendis fugiat amet molestias provident unde, deleniti quo
+            ducimus placeat voluptas!
+          <p>
+          <p class="ready__text">Quisquam voluptatum quae veritatis quas odio dolores quis voluptas asperiores ex
+            obcaecati reiciendis quidem
+            ducimus et doloribus sed tempore, unde beatae aut consectetur eligendi ratione repellendus nulla pariatur.
+            Explicabo enim officia iure blanditiis eos, velit.
+          <p>
+          <p class="ready__text">Culpa consequatur labore, adipisci asperiores impedit tenetur quam ab dicta recusandae
+            quas nobis
+            reprehenderit necessitatibus placeat corporis enim aliquid sequi saepe. Quos amet, aliquam, reiciendis porro
+            eos voluptates maiores. Voluptas dolor quidem tempora illum laboriosam dolorum neque tenetur.
+          <p>
+          <p class="ready__text">Alias voluptates commodi eligendi perspiciatis non ipsam numquam, perferendis fugiat
+            amet molestias
+            provident unde, deleniti quo ducimus placeat voluptas! Quos amet, aliquam, reiciendis porro eos voluptates
+            maiores.
+          </p>
+        </div>
+        <div class="ready__image"><img src="assets/img/img-lamp-webdev.png" alt="ready-image"></div>
+      </div>
+    </section>
 
   </main>
 
