--- a/index.html
+++ b/index.html
@@ -160,6 +160,20 @@
         <div class="ready__image"><img src="assets/img/img-lamp-webdev.png" alt="ready-image"></div>
       </div>
     </section>
+    <section class="form">
+      <h2 class="form-title visually-hidden">Form</h2>
+      <form action="" class="form__container">
+        <div class="form-element">
+          <input type="text" class="form-element__input" placeholder="Your name...">
+        </div>
+        <div class="form-element">
+          <input type="text" class="form-element__input" placeholder="Your email...">
+        </div>
+        <div class="form-element">
+          <button class="button button--primary">Subscribe</button>
+        </div>
+      </form>
+    </section>
 
   </main>
 
