section posts + footer

--- a/index.html
+++ b/index.html
@@ -174,8 +174,101 @@
         </div>
       </form>
     </section>
-
+    <section class="posts">
+      <div class="posts__container">
+        <h2 class="posts__title">Some section of posts</h2>
+        <div class="posts__content">
+          <article class="posts-item">
+            <a href="" class="posts-item__link">
+              <div class="posts-item__image"><img src="assets/img/img-post-1.png" alt="post-image"></div>
+              <div class="posts-item__about">
+                <h3 class="posts-item__title">Nostrum quod fugiat odio perspiciatis</h3>
+                <p class="posts-item__text">Minus ad voluptas non, ducimus suscipit temporibus explicabo! Inventore
+                  dolorum, debitis eligendi earum in corrupti consectetur quam nesciunt facilis explicabo?</p>
+              </div>
+            </a>
+          </article>
+          <article class="posts-item">
+            <a href="" class="posts-item__link">
+              <div class="posts-item__image"><img src="assets/img/img-post-2.png" alt="post-image"></div>
+              <div class="posts-item__about">
+                <h3 class="posts-item__title">Lorem ipsum dolor amet</h3>
+                <p class="posts-item__text">Lorem ipsum dolor sit amet,
+                  consectetur adipisicing elit. Nihil
+                  aperiam ipsum obcaecati, quisquam.
+                  Reprehenderit corporis neque
+                  architecto, id, vero voluptate.</p>
+              </div>
+            </a>
+          </article>
+          <article class="posts-item">
+            <a href="" class="posts-item__link">
+              <div class="posts-item__image"><img src="assets/img/img-post-3.png" alt="post-image"></div>
+              <div class="posts-item__about">
+                <h3 class="posts-item__title">Eum quibusdam voluptas explicabo, commodi</h3>
+                <p class="posts-item__text">Quo sit explicabo dolore, nihil soluta
+                  adipisci deleniti consequatur voluptate
+                  cumque, quaerat minima repudiandae
+                  consectetur incidunt dolorum, culpa,
+                  voluptates ab!</p>
+              </div>
+            </a>
+          </article>
+          <article class="posts-item">
+            <a href="" class="posts-item__link">
+              <div class="posts-item__image"><img src="assets/img/img-post-4.png" alt="post-image"></div>
+              <div class="posts-item__about">
+                <h3 class="posts-item__title">Voluptate fuga earum</h3>
+                <p class="posts-item__text">Ullam saepe maiores magni,
+                  consequatur perferendis earum
+                  veniam officiis sapiente a veritatis
+                  corporis voluptatum repellendus,
+                  autem dolore molestiae suscipit quia!</p>
+              </div>
+            </a>
+          </article>
+          <article class="posts-item">
+            <a href="" class="posts-item__link">
+              <div class="posts-item__image"><img src="assets/img/img-post-5.png" alt="post-image"></div>
+              <div class="posts-item__about">
+                <h3 class="posts-item__title">Facere rerum aliquam nostrum vel</h3>
+                <p class="posts-item__text">Quo sit explicabo dolore, nihil soluta
+                  adipisci deleniti consequatur voluptate
+                  cumque, quaerat minima repudiandae
+                  consectetur incidunt dolorum, culpa,
+                  voluptates ab!</p>
+              </div>
+            </a>
+          </article>
+          <article class="posts-item">
+            <a href="" class="posts-item__link">
+              <div class="posts-item__image"><img src="assets/img/img-post-6.png" alt="post-image"></div>
+              <div class="posts-item__about">
+                <h3 class="posts-item__title">Ratione reprehenderit necessitatibus, labore vel</h3>
+                <p class="posts-item__text">Ad est voluptate sunt, cupiditate, voluptatem dignissimos corporis unde
+                  cumque distinctio, ab odio dolores molestias non cum fugiat enim voluptatibus!</p>
+              </div>
+            </a>
+          </article>
+        </div>
+        <div class="posts__button">
+          <a href="" class="button button--primary">View all posts...</a>
+        </div>
+      </div>
+    </section>
   </main>
+  <footer class="footer">
+    <div class="footer__container">
+      <div class="footer__social">
+        <a href="" class="footer__link fa-facebook-square"></a>
+        <a href="" class="footer__link fa-google-plus-square"></a>
+        <a href="" class="footer__link fa-twitter-square"></a>
+        <a href="" class="footer__link fa-pinterest-square"></a>
+        <a href="" class="footer__link fa-flickr"></a>
+      </div>
+      <div class="footer__text"><span>WE ARE REAL</span><br><span>WEB-DEVELOPERS</span></div>
+    </div>
+  </footer>
 
   <!-- Подключаем библиотеку jquery, необходимую для работы нашего основного скрипта -->
   <script src="libs/jquery/dist/jquery.min.js"></script>
