--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     </section>
     <section class="form">
       <h2 class="form-title visually-hidden">Form</h2>
-      <form action="" class="form__container">
+      <form action="#" class="form__container">
         <div class="form-element">
           <input type="text" class="form-element__input" placeholder="Your name...">
         </div>
